--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@restart/hooks": "^0.4.9",
     "@types/summernote": "^0.8.7",
     "antd": "^4.5.2",
+    "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
     "faker": "^5.5.3",
@@ -62,8 +63,10 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.3",
+    "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-owl-carousel": "^2.3.1",
+    "react-phone-number-input": "^3.2.19",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.9",
     "react-redux-saga": "^1.0.2",
@@ -77,6 +80,7 @@
     "react-sticky-box": "^0.9.3",
     "react-summernote": "^2.0.2",
     "react-theme-provider": "^0.1.3",
+    "react-toastify": "^9.1.1",
     "reactstrap": "^8.5.1",
     "recharts": "^2.4.3",
     "redux": "^4.2.1",
