--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.11",
     "@fullcalendar/core": "^6.1.4",
-    "@fullcalendar/daygrid": "^5.10.2",
-    "@fullcalendar/interaction": "^5.10.2",
-    "@fullcalendar/react": "^5.10.2",
-    "@fullcalendar/timegrid": "^5.10.2",
+    "@fullcalendar/daygrid": "^5.11.4",
+    "@fullcalendar/interaction": "^5.11.4",
+    "@fullcalendar/react": "^5.11.4",
+    "@fullcalendar/timegrid": "^5.11.4",
     "@hookform/resolvers": "^2.9.11",
     "@reduxjs/toolkit": "^1.9.2",
     "@restart/hooks": "^0.4.9",
@@ -57,6 +57,7 @@
     "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-v5": "^1.4.0",
+    "react-calendar": "^4.2.1",
     "react-chartjs-2": "^4.3.1",
     "react-custom-scrollbars": "^4.2.1",
     "react-datepicker": "^4.7.0",
