--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-owl-carousel": "^2.3.1",
+    "react-paginate": "^8.1.5",
     "react-phone-number-input": "^3.2.19",
     "react-popper": "^2.2.3",
     "react-redux": "^7.2.9",
