--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
     "line-awesome": "^1.3.0",
+    "lru-cache": "^9.1.1",
     "maskedinput": "^3.3.11",
     "moment": "^2.29.4",
     "popper.js": "^1.16.1",
