--- a/.babelrc
+++ b/.babelrc
@@ -2,3 +2,22 @@
   "presets": ["@babel/preset-env", "@babel/preset-react"],
   "plugins": ["@babel/plugin-proposal-class-properties"]
 }
+// {
+//   "presets": [
+//     [
+//       "@babel/preset-env",
+//       {
+//         "useBuiltIns": "usage",
+//         "corejs": 3
+//       }
+//     ]
+//   ],
+//   "plugins": [
+//     [
+//       "@babel/plugin-transform-runtime",
+//       {
+//         "regenerator": true
+//       }
+//     ]
+//   ]
+// }
