--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   ],
   "dependencies": {
     "@ant-design/icons": "^5.0.1",
+    "@babel/runtime": "^7.21.0",
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-brands-svg-icons": "^5.15.4",
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
@@ -37,7 +38,6 @@
     "@reduxjs/toolkit": "^1.9.2",
     "@restart/hooks": "^0.4.9",
     "@types/summernote": "^0.8.7",
-    "antd": "^4.5.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
