--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-hook-form": "^7.43.3",
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
+    "react-multi-select-component": "^4.3.4",
     "react-owl-carousel": "^2.3.1",
     "react-paginate": "^8.1.5",
     "react-phone-number-input": "^3.2.19",
