--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
+    "exceljs": "^4.3.0",
     "faker": "^5.5.3",
     "feather-icons-react": "^0.5.0",
     "font-awesome": "^4.7.0",
@@ -48,6 +49,8 @@
     "history": "^5.0.0",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.28",
     "line-awesome": "^1.3.0",
     "lru-cache": "^9.1.1",
     "maskedinput": "^3.3.11",
@@ -59,7 +62,10 @@
     "react-bootstrap-v5": "^1.4.0",
     "react-calendar": "^4.2.1",
     "react-chartjs-2": "^4.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-csv": "^2.2.2",
     "react-custom-scrollbars": "^4.2.1",
+    "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -109,7 +115,7 @@
     "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
     "mini-css-extract-plugin": "^0.9.0",
-    "papaparse": "^5.2.0",
+    "papaparse": "^5.4.1",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
     "uglifyjs-webpack-plugin": "^1.1.2",
