--- a/package.json
+++ b/package.json
@@ -98,6 +98,7 @@
     "source-map-loader": "^4.0.1",
     "sticky-kit": "^1.1.3",
     "sticky-sidebar": "^3.3.1",
+    "styled-components": "^5.3.10",
     "sweetalert2": "^11.7.3",
     "text-editor-react": "^1.0.3",
     "theia-sticky-sidebar": "^1.7.0",
