--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.1.3",
     "chart.js": "^3.7.0",
+    "crypto-js": "^4.1.1",
     "dayjs": "^1.11.7",
     "exceljs": "^4.3.0",
     "faker": "^5.5.3",
