--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "react-paginate": "^8.1.5",
     "react-phone-number-input": "^3.2.19",
     "react-popper": "^2.2.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^7.2.9",
     "react-redux-saga": "^1.0.2",
     "react-router-dom": "^5.2.0",
