Message Feature updated

--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.3",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-multi-select-component": "^4.3.4",
