--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-bootstrap": "^1.3.0",
     "react-bootstrap-v5": "^1.4.0",
     "react-calendar": "^4.2.1",
