--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@fullcalendar/react": "^5.11.4",
     "@fullcalendar/timegrid": "^5.11.4",
     "@hookform/resolvers": "^2.9.11",
+    "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.2",
     "@restart/hooks": "^0.4.9",
     "@types/summernote": "^0.8.7",
