--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "feather-icons-react": "^0.5.0",
     "font-awesome": "^4.7.0",
     "history": "^5.0.0",
+    "html-react-parser": "^4.0.0",
     "jquery-slimscroll": "^1.3.8",
     "jquery-sticky-kit": "^1.1.3",
     "jspdf": "^2.5.1",
