--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "lru-cache": "^9.1.1",
     "maskedinput": "^3.3.11",
     "moment": "^2.29.4",
+    "pdfmake": "^0.2.7",
     "popper.js": "^1.16.1",
     "prop-types": "^15.7.2",
     "react": "^18.2.0",
