--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "promaxcare",
   "version": "0.1.0",
-  "homepage": "",
+  "homepage": "https://app.promaxcare.com.au/",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server",
