--- a/package.json
+++ b/package.json
@@ -29,11 +29,6 @@
     "@fortawesome/free-regular-svg-icons": "^5.15.4",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
     "@fortawesome/react-fontawesome": "^0.1.11",
-    "@fullcalendar/core": "^6.1.4",
-    "@fullcalendar/daygrid": "^5.11.4",
-    "@fullcalendar/interaction": "^5.11.4",
-    "@fullcalendar/react": "^5.11.4",
-    "@fullcalendar/timegrid": "^5.11.4",
     "@hookform/resolvers": "^2.9.11",
     "@react-pdf/renderer": "^3.1.12",
     "@reduxjs/toolkit": "^1.9.5",
@@ -73,6 +68,7 @@
     "react-data-table-component": "^7.5.3",
     "react-datepicker": "^4.7.0",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.10",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^7.43.3",
     "react-html-parser": "^2.0.2",
