--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "promaxcare",
   "version": "0.1.0",
   "homepage": "https://app.promaxcare.com.au/",
+  "proxy": "https://profitmax-001-site10.ctempurl.com",
   "private": true,
   "scripts": {
     "start": "webpack-dev-server",
