--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "react-icons": "^4.8.0",
     "react-input-mask": "^2.0.4",
     "react-multi-select-component": "^4.3.4",
+    "react-multistep": "^5.5.9",
     "react-owl-carousel": "^2.3.1",
     "react-paginate": "^8.1.5",
     "react-phone-number-input": "^3.2.19",
