--- a/package.json
+++ b/package.json
@@ -106,8 +106,7 @@
     "styled-components": "^5.3.10",
     "sweetalert2": "^11.7.3",
     "text-editor-react": "^1.0.3",
-    "theia-sticky-sidebar": "^1.7.0",
-    "yup": "^0.32.11"
+    "theia-sticky-sidebar": "^1.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.16.12",
